cf_analysis_results/checkerframework_3.42.0_results_WPI/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8.txt
warning: MustCallChecker did not find annotation file or directory ../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8//wpi-out on classpath or within directory /home/smala009/RLF/cf-rlc/../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8
    Classpath:
    file:/home/smala009/RLF/rlfixer/code/tools/checker-framework-3.43.0/checker/dist/checker.jar
warning: ResourceLeakChecker did not find annotation file or directory ../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8//wpi-out on classpath or within directory /home/smala009/RLF/cf-rlc/../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8
    Classpath:
    file:/home/smala009/RLF/rlfixer/code/tools/checker-framework-3.43.0/checker/dist/checker.jar
../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8/src/peg/parser.java:209: error: (required.method.not.called) $$ 4 $$ method close $$ new java.io.FileReader(argv[i]) $$ java.io.FileReader $$ possible exceptional exit due to parser.parse() with exception type java.io.FileNotFoundException $$ ( 10352, 10383 ) $$ @MustCall method close may not have been invoked on new java.io.FileReader(argv[i]) or any of its aliases.
                        scanner = new AnalizadorLexico( new java.io.FileReader(argv[i]) );
                                                        ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to parser.parse() with exception type java.io.FileNotFoundException
Note: ../dataset/june2020_dataset/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8/src/peg/EstadoMaquina.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
2 warnings
